--- a/blog/data/nav.css
+++ b/blog/data/nav.css
@@ -1,7 +1,8 @@
 #floater {
-	 position: -webkit-sticky;
-	position: sticky;
+	position: fixed;
 	top: 0;
+	left: 0;
+	right: 0;
 	z-index: 2;
 	display: block;
 	margin: 0;
@@ -32,6 +33,10 @@
 	background-color: var(--background-normal);
 }
 
+#floater+ * {
+	padding-top: 2.5rem;
+}
+
 #floater> * {
 	display: none;
 }
@@ -42,7 +47,7 @@
 
 #floater> .floater-avatar {
 	box-sizing: border-box;
-	margin-right: 5px;
+	margin: 0 5px 0 0;
 	height: 2.5rem;
 	border: 2px solid var(--background-interface);
 	border-radius: 5px;
@@ -66,6 +71,7 @@
 #floater> .floater-menu {
 	position: relative;
 	float: right;
+	margin: 0;
 	border: none;
 	padding: 0 5px;
 	min-width: 1.5em;
@@ -92,7 +98,7 @@
 	margin: 0;
 	min-width: 200px;
 	max-height: 40vh;
-	border-radius: 2px;
+	border-radius: 5px;
 	padding: 5px 10px;
 	overflow-y: auto;
 	
@@ -139,6 +145,12 @@
 	cursor: inherit;
 }
 
+@media print {
+	#floater {
+		display: none;
+	}
+}
+
 @media screen and (prefers-color-scheme: dark) {
 	#floater::before {
 		background-color: var(--background-interface);
@@ -146,8 +158,10 @@
 	}
 }
 
-@media print {
-	#floater {
-		display: none;
-	}
+#banner~ #floater {
+	 position: -webkit-sticky;
+	position: sticky;
+}
+#banner~ #floater+ * {
+	padding-top: 0;
 }
