--- a/blog/data/content.css
+++ b/blog/data/content.css
@@ -1,11 +1,28 @@
 article {
 	padding: 10px;
+	
+	 font-family: sans-serif;
+	font-family: var(--font-sans);
+	line-height: 1.4;
+	
+	 color: #223344;
+	color: var(--text-normal);
 }
 article> *:first-child {
 	margin-top: 5px;
 }
 article> *:last-child {
 	margin-bottom: 5px;
+}
+
+article.marked-abstract {
+	min-height: 100px;
+	max-height: 50vh;
+	cursor: pointer;
+}
+article article.marked-abstract {
+	min-height: 0;
+	max-height: 40vh;
 }
 
 article h1, article h2, article h3 {
@@ -16,7 +33,7 @@ article h4, article h5, article h6 {
 	margin: 15px 0;
 	color: var(--text-aux);
 }
-article p, article hr, article ol, article ul, article blockquote, article pre, article code, article article {
+article p, article ol, article ul, article hr, article progress, article blockquote, article pre, article code, article article {
 	margin: 15px 0;
 }
 
@@ -48,6 +65,14 @@ article h6 {
 	font-weight: 500;
 }
 
+article ol, article ul {
+	padding-left: 25px;
+}
+article li> ol, article li> ul {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
 article hr {
 	margin-left: -10px;
 	margin-right: -10px;
@@ -56,12 +81,12 @@ article hr {
 	padding-top: 20px;
 }
 
-article ol, article ul {
-	padding-left: 25px;
-}
-article li> ol, article li> ul {
-	margin-top: 5px;
-	margin-bottom: 5px;
+article progress {
+	display: block;
+	width: auto;
+	height: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
 article blockquote, article pre, article code, article article {
