--- a/source/content.css
+++ b/source/content.css
@@ -18,7 +18,10 @@ article> *:last-child {
 article.marked-abstract {
 	min-height: 100px;
 	max-height: 50vh;
+	overflow: hidden;
+	
 	font-size: 90%;
+	
 	cursor: pointer;
 }
 article article.marked-abstract {
@@ -53,21 +56,18 @@ article h1 {
 	margin-left: -10px;
 	border-left: 5px solid var(--text-aux);
 	padding-left: 5px;
-	font-size: 2.0em;
-}
-article h2 {
 	font-size: 1.8em;
 }
-article h3 {
+article h2 {
 	font-size: 1.6em;
 }
-article h4 {
+article h3 {
 	font-size: 1.4em;
 }
-article h5 {
+article h4 {
 	font-size: 1.2em;
 }
-article h6 {
+article h5, article h6 {
 	font-size: 1.1em;
 	font-weight: 500;
 }
@@ -132,6 +132,7 @@ article pre, article code {
 }
 article code {
 	border-left-width: 25px;
+	font-size: 90%;
 }
 
 article em {
