--- a/source/floater.css
+++ b/source/floater.css
@@ -47,7 +47,7 @@
 
 #floater> .floater-avatar {
 	box-sizing: border-box;
-	margin: 0 5px 0 0;
+	margin-right: 10px;
 	height: 2.5rem;
 	border: 2px solid var(--background-interface);
 	border-radius: 5px;
